# todo-api

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 02d8e78fda85_initial_migration.py  d7a36a630ac4_make_todos_description_nullable.py
src/todo_api/: database.py  main.py  models.py  settings.py
src/todo_api/routers/: auth.py  todos.py  users.py
src/todo_api/tests/: test_users.py
todo_api/: database.py  main.py  models.py  settings.py
todo_api/routers/: users.py
todo_api/tests/: config.py  conftest.py  test_todos.py  test_users.py
todo_api/tests/fixtures/: fixtures_users.py
