[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["adriangube <adriangubedev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "src.todo_api.main:start"
prod = "src.todo_api.main:start"

[tool.pylint]
disable = ["missing-function-docstring", "missing-module-docstring"]
